test_case/rust-lang_rust/50441_386612701_9.rs
\n\nRust only looks at the signature of the called function, as such it must\nalready specify all requirements that will be used for every type parameter.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/on-unimplemented/no-debug.rs","byte_start":621,"byte_end":624,"line_start":21,"line_end":21,"column_start":23,"column_end":26,"is_primary":true,"text":[{"text":"    println!(\"{} {}\", Foo, Bar);","highlight_start":23,"highlight_end":26}],"label":"`Foo` cannot be formatted with the default formatter; try using `{:?}` (or {:#?} for pretty-print) instead if you are using a format string","suggested_replacement":null,"expansion":{"span":{"file_name":"<print macros>","byte_start":54,"byte_end":85,"line_start":2,"line_end":2,"column_start":27,"column_end":58,"is_primary":false,"text":[{"text":"$ crate :: io :: _print ( format_args ! ( $ ( $ arg ) * ) ) ) ;","highlight_start":27,"highlight_end":58}],"label":null,"suggested_replacement":null,"expansion":{"span":{"file_name":"<println macros>","byte_start":138,"byte_end":191,"line_start":3,"line_end":3,"column_start":8,"column_end":61,"is_primary":false,"text":[{"text":") => ( print ! ( concat ! ( $ fmt , \"\\n\" ) , $ ( $ arg ) * ) ) ;","highlight_start":8,"highlight_end":61}],"label":null,"suggested_replacement":null,"expansion":{"span":{"file_name":"/checkout/src/test/ui/on-unimplemented/no-debug.rs","byte_start":603,"byte_end":631,"line_start":21,"line_end":21,"column_start":5,"c?}\", foo); // error: the trait `core::fmt::Debug` is not\n                           //        implemented for the type `T`\n}\n\nfn main() {\n    // We now call the method with the i32 type,\n    // which *does* implement the Debug trait.\n    some_func(5i32);\n}\n